--- a/src/main/resources/com/example/executables/Home-view.fxml
+++ b/src/main/resources/com/example/executables/Home-view.fxml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="581.0" prefWidth="768.0"  xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.executables.HomeController">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="581.0" prefWidth="768.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.executables.HomeController">
    <children>
       <VBox prefHeight="582.0" prefWidth="214.0">
          <children>
-            <AnchorPane fx:id="side_page" prefHeight="582.0" prefWidth="176.0" styleClass="side_page" >
+            <AnchorPane fx:id="side_page" prefHeight="582.0" prefWidth="176.0" style="-fx-background-color: black;" styleClass="side_page">
                <children>
-                  <Button fx:id="homebutton" layoutX="32.0" layoutY="191.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="146.0" text="Home" textFill="#fffbfb">
-                     <font>
-                        <Font name="System Italic" size="12.0" />
-                     </font></Button>
-                  <Button fx:id="homebutton1" layoutX="32.0" layoutY="291.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="146.0" styleClass="side_page"  text="Logout" textFill="#fcf9f9" />
-                  <Button fx:id="homebutton11" layoutX="32.0" layoutY="244.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="146.0" styleClass="side_page" text="Help" textFill="#f2f2f2" />
+                  <Button fx:id="logout" layoutX="32.0" layoutY="524.0" mnemonicParsing="false" onAction="#OnClickLogout" prefHeight="33.0" prefWidth="146.0" style="-fx-background-color: black;" styleClass="side_page" text="Logout" textFill="#fcf9f9" />
+                  <Button fx:id="help" layoutX="32.0" layoutY="244.0" mnemonicParsing="false" onAction="#OnClickHelp" prefHeight="33.0" prefWidth="146.0" style="-fx-background-color: black;" styleClass="side_page" text="Help" textFill="#f2f2f2" />
                </children></AnchorPane>
          </children>
       </VBox>
